--- a/views/main/index.html
+++ b/views/main/index.html
@@ -22,14 +22,34 @@
         </header>
         <nav>
             <div class="menu">
+                <a href="/" class="focus">首页</a>
 
             </div>
         </nav>
         <main class="clear">
             <div class="mainLeft">
+                <div class="listBox">
+                    <h1>{{content.title}}</h1>
+                    <p class="colDefault">
+                        作者：<span class="colInfo"></span>
+                        时间：<span class="colInfo"></span>
+                        阅读：<span class="colInfo"></span>
+                        评论：<span class="colInfo"></span>
+                    </p>
 
+                </div>
+                <div class="pager">
+                    <ul class="clear">
+                        <li class="previous">
+                            <a href="">上一页</a>
+                        </li>
+                        <li></li>
+                        <li class="next">
+                            <a href="">下一页</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-
             <div class="mainRight">
                 <div class="rightBox" id="userInfo">
                     <div class="title"><span>用户信息</span></div>
@@ -46,7 +66,6 @@
                         </span>
                     </p>
                 </div>
-
                 <div class="rightBox" id="loginBox">
                     <div class="title"><span>登录</span></div>
                     <div class="line"><span class="colDark">用户名：</span><input name="username" type="text" /><em></em></div>
@@ -55,8 +74,7 @@
                     <p class="textRight">还没注册？<a href="javascript:;" class="colMint">马上注册</a>　</p>
                     <p class="colWarning textCenter"></p>
                 </div>
-
-                <div class="rightBox" id="registerBox" style="display: none;">
+                <div class="rightBox" id="registerBox">
                     <div class="title"><span>注册</span></div>
                     <div class="line"><span class="colDark">用户名：</span><input name="username" type="text" /></div>
                     <div class="line"><span class="colDark">密码：</span><input name="password" type="password" /></div>
@@ -65,16 +83,18 @@
                     <p class="textRight">已有账号？<a href="javascript:;" class="colMint">马上登录</a>　</p>
                     <p class="colWarning textCenter"></p>
                 </div>
-
-
                 <div class="rightBox">
-                    <div class="title"><span>社区</span></div>
-                    <p><a href="http://www.miaov.com" target="_blank" class="colDanger">妙味课堂</a></p>
-                    <p><a href="http://bbs.miaov.com" target="_blank" class="colDanger">妙味茶馆</a></p>
+                    <div class="title">
+                        <span>社区</span>
+                    </div>
+                    <p>
+                        <a href="http://www.miaov.com" target="_blank" class="colDanger">妙味课堂</a>
+                    </p>
+                    <p>
+                        <a href="http://bbs.miaov.com" target="_blank" class="colDanger">妙味茶馆</a>
+                    </p>
                 </div>
             </div>
-
-
         </main>
         <div class="copyright textCenter">Copyright © miaov.com 版权所有 | 京ICP备08102442号</div>
     </body>
