--- a/views/main/index.html
+++ b/views/main/index.html
@@ -5,10 +5,10 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Blog</title>
-        <link href="/css/main.css" rel="stylesheet" type="text/css">
-        <link href="/fontAwesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-        <script src="/js/jquery-1.12.4.min.js"></script>
-        <script src="/js/index.js"></script>
+        <link href="css/main.css" rel="stylesheet" type="text/css">
+        <link href="fontAwesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+        <script src="js/jquery-1.12.4.min.js"></script>
+        <script src="js/index.js"></script>
     </head>
     <body>
         <header>
@@ -51,21 +51,21 @@
                 </div>
             </div>
             <div class="mainRight">
-                <div class="rightBox" id="userInfo">
-                    <div class="title"><span>用户信息</span></div>
-                    <p>
-                        <span class="colDark">{{userInfo.username}}</span>
-                    </p>
-                    <p>
-                        <span class="colDanger">你好，管理员！</span>
-                        <a href="/admin">进入管理</a>
-                    </p>
-                    <p>
-                        <span class="colDark">
-                            <a href="javascript:;" id="logout">退出</a>
-                        </span>
-                    </p>
-                </div>
+                <!--<div class="rightBox" id="userInfo">-->
+                    <!--<div class="title"><span>用户信息</span></div>-->
+                    <!--<p>-->
+                        <!--<span class="colDark">{{userInfo.username}}</span>-->
+                    <!--</p>-->
+                    <!--<p>-->
+                        <!--<span class="colDanger">你好，管理员！</span>-->
+                        <!--<a href="/admin">进入管理</a>-->
+                    <!--</p>-->
+                    <!--<p>-->
+                        <!--<span class="colDark">-->
+                            <!--<a href="javascript:;" id="logout">退出</a>-->
+                        <!--</span>-->
+                    <!--</p>-->
+                <!--</div>-->
                 <div class="rightBox" id="loginBox">
                     <div class="title"><span>登录</span></div>
                     <div class="line"><span class="colDark">用户名：</span><input name="username" type="text" /><em></em></div>
