--- a/views/main/index.html
+++ b/views/main/index.html
@@ -51,21 +51,26 @@
                 </div>
             </div>
             <div class="mainRight">
-                <!--<div class="rightBox" id="userInfo">-->
-                    <!--<div class="title"><span>用户信息</span></div>-->
-                    <!--<p>-->
-                        <!--<span class="colDark">{{userInfo.username}}</span>-->
-                    <!--</p>-->
-                    <!--<p>-->
-                        <!--<span class="colDanger">你好，管理员！</span>-->
-                        <!--<a href="/admin">进入管理</a>-->
-                    <!--</p>-->
-                    <!--<p>-->
-                        <!--<span class="colDark">-->
-                            <!--<a href="javascript:;" id="logout">退出</a>-->
-                        <!--</span>-->
-                    <!--</p>-->
-                <!--</div>-->
+                <div class="rightBox" id="userInfo">
+                    <div class="title">
+                        <span>用户信息</span>
+                    </div>
+                    <p>
+                        <span class="colDark"></span>
+                    </p>
+                    <p>
+                        <span class="colDanger">你好，管理员！</span>
+                        <a href="/admin">进入管理</a>
+                    </p>
+                    <p>
+                        <span class="colDanger">你好，欢迎光临我的博客！</span>
+                    </p>
+                    <p>
+                        <span class="colDark">
+                            <a href="javascript:;" id="logout">退出</a>
+                        </span>
+                    </p>
+                </div>
                 <div class="rightBox" id="loginBox">
                     <div class="title"><span>登录</span></div>
                     <div class="line"><span class="colDark">用户名：</span><input name="username" type="text" /><em></em></div>
