--- a/views/main/index.html
+++ b/views/main/index.html
@@ -51,19 +51,17 @@
                 </div>
             </div>
             <div class="mainRight">
+                {% if userInfo._id %}
                 <div class="rightBox" id="userInfo">
                     <div class="title">
                         <span>用户信息</span>
                     </div>
                     <p>
-                        <span class="colDark"></span>
+                        <span class="colDark">{{userInfo.username}}</span>
                     </p>
                     <p>
-                        <span class="colDanger">你好，管理员！</span>
-                        <a href="/admin">进入管理</a>
-                    </p>
-                    <p>
-                        <span class="colDanger">你好，欢迎光临我的博客！</span>
+                        <span class="colDanger info">你好，欢迎光临我的博客!</span>
+                        <!--<a href="/admin">你可以进入管理</a>-->
                     </p>
                     <p>
                         <span class="colDark">
@@ -71,6 +69,7 @@
                         </span>
                     </p>
                 </div>
+                {% else %}
                 <div class="rightBox" id="loginBox">
                     <div class="title"><span>登录</span></div>
                     <div class="line"><span class="colDark">用户名：</span><input name="username" type="text" /><em></em></div>
@@ -88,6 +87,7 @@
                     <p class="textRight">已有账号？<a href="javascript:;" class="colMint">马上登录</a>　</p>
                     <p class="colWarning textCenter"></p>
                 </div>
+                {% endif %}
                 <div class="rightBox">
                     <div class="title">
                         <span>社区</span>
