--- a/views/main/index.html
+++ b/views/main/index.html
@@ -65,7 +65,9 @@
                         <a href="/admin">进入管理</a>
                     </p>
                     {% else %}
-                    <p><span class="colDanger">你好，欢迎光临我的博客！</span></p>
+                    <p>
+                        <span class="colDanger">你好，欢迎光临我的博客！</span>
+                    </p>
                     {% endif %}
                     <p>
                         <span class="colDark">
